# odroid-go-multi-firmware

./: .gitignore  README.md  sdkconfig.odroid_go
components/esp_bsp_generic/: Kconfig
components/esp_bsp_generic/src/: esp_bsp_generic.c
main/: CMakeLists.txt  display.c  display.h  input.c  main.c  sdcard.c  sdcard.h
